[package]
name = "youchoose"
version = "0.1.1"
authors = ["nathom <nathanthomas707@gmail.com>"]
edition = "2018"
description = "A simple, easy to use command line menu."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
